kube/api/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: graphql-api
  labels:
    name: graphql-api
    env: production
spec:
  strategy:
    rollingUpdate:
      maxSurge: 2
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        name: graphql-api
        env: production
    spec:
      containers:
        - image: khaosdoctor/simple-graphql-api
          name: graphql-api
          resources:
            requests:
              cpu: "200m"
              memory: "256M"
            limits:
              cpu: "500m"
              memory: "512M"
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 90
            timeoutSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 30
            timeoutSeconds: 10
          ports:
            - containerPort: 3000
              name: http
